[gd_scene load_steps=15 format=3 uid="uid://232bpxhfwr6a"]

[ext_resource type="Script" path="res://Scripts/Shops/shop_basic.gd" id="1_5e756"]
[ext_resource type="Script" path="res://Scripts/Shops/shop_skill_seblak.gd" id="2_rwheo"]
[ext_resource type="Texture2D" uid="uid://b2ef3oqk6byaa" path="res://Sprites/FoodStalls/seblak/10.png" id="2_vvjo5"]
[ext_resource type="Shader" path="res://Shaders/circle.gdshader" id="3_m8kqr"]
[ext_resource type="Texture2D" uid="uid://bjh3n0pf21r07" path="res://Sprites/FoodStalls/seblak/11.png" id="3_p0uh5"]
[ext_resource type="Texture2D" uid="uid://lj7h71ok6q7i" path="res://Sprites/FoodStalls/seblak/12.png" id="4_nk04q"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7s4tx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u0osb"]
radius = 28.8507

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1lfhk"]
shader = ExtResource("3_m8kqr")
shader_parameter/radius = 0.49
shader_parameter/outline_thickness = 0.008
shader_parameter/inside_alpha = 0.2

[sub_resource type="Gradient" id="Gradient_pymhg"]
offsets = PackedFloat32Array(0, 0.00649351)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m2m4l"]
gradient = SubResource("Gradient_pymhg")
fill_from = Vector2(0, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsalt"]
size = Vector2(15, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocuq0"]
size = Vector2(9.66666, 59.6667)

[sub_resource type="SpriteFrames" id="SpriteFrames_afu0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vvjo5")
}, {
"duration": 1.0,
"texture": ExtResource("3_p0uh5")
}, {
"duration": 1.0,
"texture": ExtResource("4_nk04q")
}],
"loop": true,
"name": &"SeblakStall",
"speed": 5.0
}]

[node name="ShopSeblak" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_5e756")
priceToBuy = 530
moneyMade = 70
placableTileIDs = Array[int]([1])

[node name="ShopSkill" type="Area2D" parent="."]
material = SubResource("CanvasItemMaterial_7s4tx")
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 2
script = ExtResource("2_rwheo")
slowPercentage = 0.1

[node name="Collision" type="CollisionShape2D" parent="ShopSkill"]
shape = SubResource("CircleShape2D_u0osb")
debug_color = Color(0.565282, 0.55251, 0.223068, 0.42)

[node name="AreaColor" type="Sprite2D" parent="ShopSkill"]
self_modulate = Color(0.941176, 0.0588235, 0, 1)
material = SubResource("ShaderMaterial_1lfhk")
scale = Vector2(0.90625, 0.90625)
texture = SubResource("GradientTexture2D_m2m4l")

[node name="ShopBody" type="Area2D" parent="."]
position = Vector2(-32, -32)
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="ShopBody"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_vsalt")

[node name="ShopRange" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="Collision" type="CollisionShape2D" parent="ShopRange"]
shape = SubResource("RectangleShape2D_ocuq0")

[node name="Collision2" type="CollisionShape2D" parent="ShopRange"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_ocuq0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -6.5)
scale = Vector2(0.484, 0.484)
sprite_frames = SubResource("SpriteFrames_afu0n")
animation = &"SeblakStall"
frame_progress = 0.76798

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 7
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="ShopSkill" to="ShopSkill" method="_on_body_entered"]
[connection signal="area_entered" from="ShopBody" to="." method="_on_shop_body_area_entered"]
[connection signal="area_exited" from="ShopBody" to="." method="_on_shop_body_area_exited"]
[connection signal="body_entered" from="ShopBody" to="." method="_on_shop_body_body_entered"]
[connection signal="body_exited" from="ShopBody" to="." method="_on_shop_body_body_exited"]
[connection signal="body_entered" from="ShopRange" to="." method="_on_shop_range_body_entered"]
[connection signal="body_exited" from="ShopRange" to="." method="_on_shop_range_body_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/Button" to="." method="_on_button_button_up"]
